syntax = "proto3";

package dmx_controller;

message FixtureDefinition {
  message StrobeMapping {
    int32 no_strobe = 1;
    int32 slow_strobe = 2;
    int32 fast_strobe = 3;
  }

  message Channel {
    string type = 1;

    /* Default value to output for this channel. */
    uint32 default_value = 4;

    /* Minimum number of degrees that a "pan" or "tilt" channel can move.
     * Also applicable for "fine" variants. */
    int32 min_degrees = 2;

    /* Maximm number of degrees that a "pan" or "tilt" channel can move.
     * Also applicable for "fine" variants. */
    int32 max_degrees = 3;

    /* If this channel type is "strobe" this mapping is set to configure fixture
     * strobe settings. */
    StrobeMapping strobe = 5;
  }

  string name = 1;
  string manufacturer = 2;
  uint32 num_channels = 4;
  map<uint32, Channel> channels = 3;
}

message PhysicalFixture {
  string name = 1;
  uint32 fixture_definition_id = 2;
  uint32 channel_offset = 3;
}

message PhysicalFixtureGroup {
  string name = 1;
  repeated uint32 physical_fixture_ids = 2;
  repeated uint32 physical_fixture_group_ids = 3;
}
